# shoes-recommendation

./: README.md  Resnet_Finetuning.ipynb  Technical_Implementation.ipynb  custom_resnet18.py  feature_extractor.py  pyproject.toml
