[tool.poetry]
name = "shoes-recommendation"
version = "0.1.0"
description = ""
authors = ["Nicolas Eiris <nicolas.eiris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nnext = "^0.0.39"
torch = "^1.12.1"
Pillow = "^9.2.0"
torchvision = "^0.13.1"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
